# mlops_project_sarat1102_christellezarka

./: .gitignore  Dockerfile  MLflow Testing Configuration.py  README.md  alert_rules.yml  alertmanager.yml  docker-compose.yml  payload.json  prometheus.yml  pyproject.toml  tasks.py
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
config/: config.yaml  config_dev.yaml  config_prod.yaml
docs/: index.html  mlops_project_sarat1102_christellezarka.html  search.js
docs/mlops_project_sarat1102_christellezarka/: config.html  data_loader.html  data_transform.html  main.html  model.html
mlruns/0/: meta.yaml
mlruns/803626877762828568/: meta.yaml
mlruns/803626877762828568/06327ab18b1447028a949c1de0c80051/: meta.yaml
mlruns/803626877762828568/2b6dee5b373341189e03dca15db28335/: meta.yaml
mlruns/803626877762828568/4893afc6b2e34160a505fc6dc4e10b48/: meta.yaml
mlruns/803626877762828568/4bbbadd513ed441582044edad36e9b1c/: meta.yaml
mlruns/803626877762828568/683a1a8a0226424bb93f04864658b12e/: meta.yaml
mlruns/803626877762828568/adf07729b9af4df987597f34558298e3/: meta.yaml
mlruns/803626877762828568/d76d8b2758194c40b9e9dde8a9033534/: meta.yaml
mlruns/803626877762828568/dbda2e9bfaa34221a1641dbb54c4a229/: meta.yaml
mlruns/models/model/: meta.yaml
src/mlops_project_sarat1102_christellezarka/: config.py  core.py  main.py
src/mlops_project_sarat1102_christellezarka/data_loader/: __init__.py  base_loader.py  csv_loader.py  factory.py  json_loader.py
src/mlops_project_sarat1102_christellezarka/data_transform/: __init__.py  base_transformer.py  data_preprocessing.py  factory.py  minmax_scaler.py  standard_scaler.py
src/mlops_project_sarat1102_christellezarka/endpoints/: pipeline.py
src/mlops_project_sarat1102_christellezarka/model/: __init__.py  (+4 more)
tests/: test_data_loader.py  test_data_transform.py  test_model.py
(+62 files in other folders)
