[tool.poetry]
name = "mlops-project-sarat1102-christellezarka"
version = "0.1.0"
description = ""
authors = ["Sara Tawm <saratawm@gmail.com>"]
readme = "README.md"
packages = [{include = "mlops_project_sarat1102_christellezarka", from = "src"}]

[tool.poetry.dependencies]
python = ">3.12,<4.0"
pandas = "^2.2.3"
numpy = "^2.2.0"
scikit-learn = "^1.6.0"
omegaconf = "^2.3.0"
pydantic = "^2.10.3"
pdoc = "^15.0.1"
stubs = "^1.0.0"
loguru = "^0.7.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
mlflow = "^2.19.0"

[tool.poetry.scripts]
mlops-project = "mlops_project_sarat1102_christellezarka.scripts.inference_batch:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.3"
pytest = "^8.3.4"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


 [tool.ruff]
 line-length = 88
 indent-width = 4
 [tool.ruff.lint]
 select = ["E", "W", "F"] # Specify the types of rules to enforce
 ignore = ["E501"] # Ignore line length warnings
 [tool.ruff.format]
 quote-style = "double" # Like Black, use double quotes for strings.
 indent-style = "space" # Like Black, indent with spaces, rather than tabs.
